fix license block width on mobile, change font size

--- a/static/main.css
+++ b/static/main.css
@@ -552,9 +552,9 @@ a:active {
     }
 
     .licenses>div {
-        width: 140px;
-        padding: 5px;
-        font-size: 11pt;
+        width: 160px;
+        padding: 3px;
+        font-size: 10pt;
     }
 
     .license-img {
